[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Shwumatik/Shwumatik.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Levels/Scripts/Level_select.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=9]
resource_name = "Event1"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text_and_buttons:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Event2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text_and_buttons:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text_and_buttons:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Level_select" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_and_buttons" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="Text_and_buttons"]
margin_top = 73.0
margin_right = 640.0
margin_bottom = 170.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level Select"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Text_and_buttons"]
margin_top = 451.0
margin_right = 640.0
margin_bottom = 476.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.341176, 0.341176, 0.341176, 1 )
custom_fonts/font = SubResource( 8 )
text = "A game by: KeichiTS and Jaspior for Global Game Jam - 2022."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="Text_and_buttons"]
margin_left = 220.0
margin_top = 392.0
margin_right = 420.0
margin_bottom = 447.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="Text_and_buttons"]
margin_left = 335.0
margin_top = 392.0
margin_right = 535.0
margin_bottom = 447.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="Node2D" parent="Text_and_buttons"]

[node name="1" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 70.0
margin_top = 210.0
margin_right = 150.0
margin_bottom = 265.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 170.0
margin_top = 210.0
margin_right = 250.0
margin_bottom = 265.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 270.0
margin_top = 210.0
margin_right = 350.0
margin_bottom = 265.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 370.0
margin_top = 210.0
margin_right = 450.0
margin_bottom = 265.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 470.0
margin_top = 210.0
margin_right = 550.0
margin_bottom = 265.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 90.0
margin_top = 270.0
margin_right = 170.0
margin_bottom = 325.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 190.0
margin_top = 270.0
margin_right = 270.0
margin_bottom = 325.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 290.0
margin_top = 270.0
margin_right = 370.0
margin_bottom = 325.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 390.0
margin_top = 270.0
margin_right = 470.0
margin_bottom = 325.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="Button" parent="Text_and_buttons/Levels"]
margin_left = 490.0
margin_top = 270.0
margin_right = 570.0
margin_bottom = 325.0
custom_colors/font_color_focus = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.223529, 0.156863, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Level 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Event1 = SubResource( 9 )
anims/Event2 = SubResource( 10 )
anims/RESET = SubResource( 11 )

[connection signal="pressed" from="Text_and_buttons/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Text_and_buttons/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/6" to="." method="_on_Level6_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/7" to="." method="_on_Level7_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/8" to="." method="_on_Level8_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/9" to="." method="_on_Level9_pressed"]
[connection signal="pressed" from="Text_and_buttons/Levels/10" to="." method="_on_Level10_pressed"]
